# uintSkin

./: .gitignore  .npmrc  LICENSE  README.md  dev-app-update.yml  electron-builder.yml  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/main/: index.ts
src/main/services/: championDataService.ts  fileImportService.ts  githubApiService.ts  modToolsWrapper.ts  repositoryService.ts  skinDownloader.ts  translationService.ts  updaterService.ts  urlDownloadService.ts
src/renderer/: index.html  overlay.html
src/renderer/src/: main.tsx  tauri-api.ts
src/renderer/src/assets/: base.css  main.css
src/renderer/src/components/: CslolToolsUpdateDialog.tsx  LCUStatusIndicator.tsx  LanguageSwitcher.tsx  ThemePicker.tsx  TitleBar.tsx  UpdateDialog.tsx  UpdateDialogMock.tsx  VirtualizedSkinGrid.tsx
src/renderer/src/components/layout/: AppHeader.tsx
src/renderer/src/components/sections/: MainLayout.tsx  ToolsDownloadModal.tsx
src/renderer/src/contexts/: ThemeContext.tsx
src/renderer/src/hooks/: useOptimizedState.ts
src/renderer/src/i18n/: index.ts
src/renderer/src/locales/en_US/: translation.json
src/renderer/src/locales/ru_RU/: translation.json
src/renderer/src/locales/tr_TR/: translation.json
src/renderer/src/store/atoms/: computed.atoms.ts
src/renderer/src/themes/: themes.ts
