[package]
name = "uintskin"
version = "0.1.0"
description = "Tauri wrapper for uintSkin"
authors = ["uintptr"]
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[profile.release]
lto = true
strip = true
